--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,14 @@ services:
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
+    healthcheck:
+      test: [ "CMD", "ls" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     volumes:
-      - ~/Commitinder:/var/lib/postgresql
+      - commitinder:/var/lib/postgresql
     networks:
       - commitinder
 
@@ -21,6 +27,10 @@ services:
     ports:
       - 8080:8080
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - commitinder
+volumes: 
+  commitinder:
+  
