--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,7 @@ go.work
 .history
 .ionide
 
+# Ignore .env variable
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,go
