--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 networks:
-  commitinder:
+  comeht:
     driver: bridge
 services:
   postgres:
@@ -17,9 +17,9 @@ services:
       retries: 3
       start_period: 30s
     volumes:
-      - commitinder:/var/lib/postgresql
+      - comeht:/var/lib/postgresql
     networks:
-      - commitinder
+      - comeht
   api:
     build:
       context: .
@@ -29,6 +29,6 @@ services:
       postgres:
         condition: service_healthy
     networks:
-      - commitinder
+      - comeht
 volumes: 
-  commitinder:
+  comeht:
